

[package]
name = "wasm-bruteforce"
version = "0.4.5"
authors = ["BatteredBunny <ayes2022@protonmail.com>"]
edition = "2024"
license = "GPLv3"
description = "Bruteforce images from image hosting websites"
repository = "https://github.com/BatteredBunny/wasm-bruteforce"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.9.1"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
gloo = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dependencies.web-sys]
version = "0.3.77"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestRedirect',
    'Response',
    'Window',
    'Document',
    'Element',
    'Blob',
    'Url',
    'HtmlInputElement',
    'HtmlButtonElement',
    'HtmlAnchorElement',
    'HtmlImageElement',
    'HtmlSelectElement',
]

[profile.release]
lto = true
opt-level = "z"

