

[package]
name = "wasm-bruteforce"
version = "0.4.5"
authors = ["BatteredBunny <ayes2022@protonmail.com>"]
edition = "2024"
license = "GPLv3"
description = "Bruteforce images from image hosting websites"
repository = "https://github.com/BatteredBunny/wasm-bruteforce"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.10.1"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
wasm-bindgen = { version = "0.2.114", features = ["serde-serialize"] }
js-sys = "0.3.91"
wasm-bindgen-futures = "0.4.64"
gloo = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dependencies.web-sys]
version = "0.3.91"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestRedirect',
    'Response',
    'Window',
    'Document',
    'Element',
    'Blob',
    'Url',
    'HtmlInputElement',
    'HtmlButtonElement',
    'HtmlAnchorElement',
    'HtmlImageElement',
    'HtmlSelectElement',
]

[profile.release]
lto = true
opt-level = "z"

